# seed-board

./: Cargo.toml  index2.html  index3.html
src/: board.rs  error.rs  game.rs  lib.rs  pieces.rs  view_board.rs
src/engine/: bitboard.rs  mod.rs  square.rs
